# Anti-DDoS-Scrubbing-Gateway

./: .gitignore  EXECUTIVE-SUMMARY.md  Makefile  PRD.md
control-plane/: README.md  alembic.ini  compose.test.yml  pyproject.toml
control-plane/app/: __init__.py  cli.py  main.py
control-plane/app/core/: applystate.py  cidr.py  config.py  deps.py  feed_parser.py  redis.py  rulematch.py  security.py  sessions.py
control-plane/app/db/: models.py  session.py
control-plane/app/services/: alert_rules.py  allocations.py  apply.py  audit.py  auth.py  billing_metrics.py  billing_period.py  ddos_amplification.py  feed_fetch.py  feed_reconcile.py  feeds.py  lists.py  nexthop_metrics.py  node_control.py  rules.py  services.py  telemetry_math.py  tenants.py  users.py
control-plane/app/worker/: __main__.py  alert_dispatch.py  alert_evaluator.py  alert_sources.py  applier.py  billing.py  blocked_port_reconciler.py  feed_coordinator.py  feed_jobs.py  feed_runner.py  feed_scheduler.py  handlers.py  nexthop_resolver.py  node_control_reconciler.py  processor.py  telemetry.py  telemetry_reader.py  worker.py
control-plane/docs/: bypass-maintenance-runbook.md
control-plane/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  preview.html  tsconfig.app.json  vite.config.ts
control-plane/frontend/src/: App.tsx  main.tsx  preview-main.tsx
control-plane/migrations/: env.py
control-plane/migrations/versions/: 20260707_0001_baseline.py  20260707_0002_auth_models.py  20260707_0003_allocated_cidr.py  (+11 more)
control-plane/tests/: __init__.py  conftest.py
(+507 files in other folders)
