[project]
name = "anti-ddos-control-plane"
version = "0.1.0"
description = "FastAPI control-plane for the Anti-DDoS scrubbing gateway"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "pwdlib[argon2]>=0.2.1",
    "redis>=5.1.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: pure tests without external services",
    "integration: tests requiring Postgres, Redis, or the ASGI app",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_unused_configs = true
mypy_path = ["."]
